# StockVizcpp

./: .gitignore  .gitmodules  CMakeLists.txt  apiclient.cpp  apiclient.h  main.cpp  readme.md  websocketclient.cpp  websocketclient.h  window.h
docs/: readme.md
src/: AddButton.h  CloseButton.h  ImGuiColor.h  Stock.h  TextButton.h  apiclient.cpp  apiclient.h  fetcher.py  main.cpp  rapidcsv.h  stocksgui-rached’s MacBook Air.cpp  stocksgui.cpp  stocksgui.h  websocketclient.cpp  websocketclient.h  window.cpp  window.h
